--- a/Front-end/css/style.css
+++ b/Front-end/css/style.css
@@ -70,7 +70,7 @@ body{
 }
 
 
-.container-fluid
+.about_us .container-fluid
 {
   padding: 70px;
 }
@@ -82,4 +82,69 @@ body{
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+}
+
+.about_us
+{
+  height: 75vh;
+}
+
+.about-us-heading
+{
+  padding-top: 3%;
+  padding-bottom: none;
+  text-align: center;
+}
+
+.footer
+{
+  height: 25vh;
+  background-color:#003A83; 
+}
+
+.footer-links
+{
+  margin-top: 50px;
+  margin-right: 16px;
+}
+
+.footer-links ul
+{
+  list-style: none;
+  padding-left: 16px;
+  
+}
+
+.footer-links ul li a
+{
+  color: white;
+  font-family: 'OpenSans';
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: 10;
+}
+
+#first_section
+{
+  border-right: 2px solid white;  
+}
+
+#Contact_us
+{
+  color:white;
+  font-size: 25px;
+  margin-top:15px;
+}
+
+.footer_corner
+{
+  float:right;
+  margin-right:10vh;
+}
+
+#copyright
+{
+  color:white;
+  font-size : 15px;
+  margin-top: 30px; 
 }
