--- a/Front-end/css/login_style.css
+++ b/Front-end/css/login_style.css
@@ -34,5 +34,10 @@
 .login-card-position {
     position: absolute;
     margin-left: 20%;
-    margin-top: 20%;
+    margin-top: 16%;
+}
+
+.login_container
+{
+    height: 90vh;
 }
