--- a/Front-end/css/dashboard.css
+++ b/Front-end/css/dashboard.css
@@ -46,7 +46,7 @@
     padding-right: 0px;
 }
 
-.col-md-9
+.col-md-10
 {
     padding-right: 0px;
     padding-left: 0px;
@@ -109,7 +109,7 @@ nav ul {
 .item .dropdown-btn
 {
     padding-left: 0px;
-    width=100%
+    width:100%;
     padding-right: 0px;
     display: block;
     border:none;
@@ -145,12 +145,10 @@ nav ul {
   .sidenav a:hover
   {
       background-color: #f1f1f1;
-      color:
   }
 .navigate
 {
     min-height: 100vh;
-    height: 100%;
     box-shadow: 0 4px 8px 0 #000000;
     transition: 0.3s;
 }.dashboard_header
@@ -185,10 +183,7 @@ nav ul {
     margin-left: 30px;
 } 
 
-.card
-{
-    height: 121px;
-}
+
 .card-body p{
     margin: 0px;
     padding:0px;
@@ -233,5 +228,5 @@ nav ul {
   }
   .active {
          background-color:#f1f1f1;
-         border=none;
+         border:none;
   }
