USD Transaction Page Completed

--- a/Front-end/css/dashboard.css
+++ b/Front-end/css/dashboard.css
@@ -177,7 +177,7 @@ nav ul {
     line-height: 0.5;
 }
 
-.fa-refresh, .fa-bell, .fa-user
+.fa-refresh, .fa-bell, .fa-sign-out-alt
 {
     color: white;
     margin-left: 30px;
